tried to get _src to be excluded, but jekyll is rather bad at this

--- a/www/_config.yml
+++ b/www/_config.yml
@@ -2,6 +2,6 @@
 # _config.yml for HackerLogos
 #
 
-exclude: [ "bin", "*.sh", "README.md", "tmp", "todo.txt" ]
+exclude: [ "**/*_src*" ]
 production_url: http://www.hackerlogos.org
 title : Hacker Logos
