--- a/www/_data/imagetype.yaml
+++ b/www/_data/imagetype.yaml
@@ -3,33 +3,38 @@
   description: 2:1 Aspect Ratio with logo and text.  Image should include some padding.
   height: 120
   width: 60
+  padding: true
 
 - id: icon
   title: Icon
-  description: Icon, no text.  
+  description: Logo, no text.  
   height: 32
   width: 32
-  padding: 5px;
+  padding: false
 
 - id: vertical
   title: Vertical Badge
   description: Vertical badge with logo above text
   height: 94
+  padding: true
 
 - id: horizontal
   title: Horizontal Badge
   description: Horizontal badge with logo on left, text on right
   height: 64
   padding: 4px;
+  padding: false
 
 - id: official
   title: Official Logo
-  description: Official Logo, with tagline/copyright/etc
+  description: Official Logo, with text, including tagline/copyright/etc
   height: 128
+  padding: false
 
 - id: wordmark
   title: Wordmark
   description: Just the name in the appropriate font in black at 64 pt.
   height: 64
   padding: 4px;
+  padding: false
 
