--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ rvm:
 install: gem install jekyll html-proofer
 script: jekyll build --source www && htmlproof ./_site
 
+branches:
+  only:
+  - gh-pages     # test the gh-pages branch
+
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
