--- a/www/_config.yml
+++ b/www/_config.yml
@@ -6,7 +6,7 @@ exclude: [ "*.sh", "**/*_src*" ]
 production_url: https://www.vectorlogo.zone
 title : Vector Logo Zone
 title_short: VLZ
-gems:
+plugins:
   - jekyll-redirect-from
 defaults:
   -
