--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: ruby
 rvm:
 - 2.1
-install: 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y librsvg2-bin imagemagick
+install:
+  - pip install python-frontmatter
   - gem install jekyll -v 3.4.5
   - gem install jekyll-redirect-from
-script: jekyll build --source www
+script:
+  - bin/frontmatter_update.py
+  - bin/fm2tag.py
+  - bin/mkcard.sh
+  - jekyll build --source www
 branches:
   only:
   - gh-pages
