--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
+dist: trusty
+sudo: true
 language: ruby
 rvm:
 - 2.1
-python:
-  - "3.5"
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y librsvg2-bin imagemagick
-  - sudo apt-get install -y python3-pip python-dev
 install:
   - sudo pip3 install python-frontmatter
   - gem install jekyll -v 3.4.5
   - gem install jekyll-redirect-from
 script:
-  - bin/frontmatter_update.py
-  - bin/fm2tag.py
+  - python3 bin/frontmatter_update.py
+  - python3 bin/fm2tag.py
   - bin/mkcard.sh
   - jekyll build --source www
 branches:
