--- a/www/_data/imagetype.yaml
+++ b/www/_data/imagetype.yaml
@@ -18,6 +18,14 @@
   height: 94
   padding: true
 
+- id: tile
+  title: Tile
+  description: Larget tile with background (to look good with any background color)
+  height: 512
+  width: 512
+  padding: false
+  maxpreviewsize: true
+
 - id: horizontal
   title: Horizontal Badge
   description: Horizontal badge with logo on left, text on right
