jekyll build fix?

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - sudo apt-get install -y librsvg2-bin imagemagick
   - sudo apt-get install python3-pip
   - sudo python3 -m pip install python-frontmatter
-  - gem install jekyll -v 3.4.5
+  - gem install jekyll
   - gem install jekyll-redirect-from
 before_script:
   - cd bin
