--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - sudo apt-get install python3-pip
   - sudo python3 -m pip install python-frontmatter
   - gem install ruby_dep -v 1.3.1
+  - gem install listen -v 3.0.8
   - gem install jekyll
   - gem install jekyll-redirect-from
 before_script:
