--- a/www/_config.yml
+++ b/www/_config.yml
@@ -2,6 +2,7 @@
 # _config.yml for VectorLogoZone
 #
 
+google_analytics_id: UA-328425-25
 exclude: [ "*.sh", "**/*_src*" ]
 production_url: https://www.vectorlogo.zone
 sharing_targets: [ "facebook", "twitter", "pinterest", "tumblr", "reddit" ]
