--- a/www/_config.yml
+++ b/www/_config.yml
@@ -4,6 +4,7 @@
 
 google_analytics_id: UA-328425-25
 exclude: [ "*.sh", "**/*_src*" ]
+permalink: /news/:year/:month/:day/:title/index.:output_ext
 production_url: https://www.vectorlogo.zone
 sharing_targets: [ "facebook", "twitter", "pinterest", "tumblr", "reddit" ]
 title : Vector Logo Zone
