move reports to their own directory

--- a/www/_config.yml
+++ b/www/_config.yml
@@ -10,7 +10,7 @@ indexpage: index.html
 sharing_targets: [ "facebook", "twitter", "pinterest", "tumblr", "reddit" ]
 title : Vector Logo Zone
 title_short: VLZ
-plugins_dir:
+plugins:
   - jekyll-redirect-from
 defaults:
   -
