--- a/www/_data/imagetype.yaml
+++ b/www/_data/imagetype.yaml
@@ -1,9 +1,14 @@
 - id: ar21
-  title: 2:1 Aspect Ratio
+  title: Rectangle
   description: 2:1 Aspect Ratio with logo and text.  Image should include some padding.
   height: 60
   width: 120
   padding: true
+  tab: true
+  search: true
+  inventory: true
+  visualinventory: true
+  amp: true
 
 - id: icon
   title: Icon
@@ -11,20 +16,35 @@
   height: 32
   width: 32
   padding: false
+  tab: true
+  search: true
+  inventory: true
+  visualinventory: true
+  amp: true
 
 - id: vertical
   title: Vertical Badge
   description: Vertical badge with logo above text
   height: 94
   padding: true
+  tab: false
+  search: false
+  inventory: true
+  visualinventory: false
+  amp: false
 
 - id: tile
   title: Tile
-  description: Large tile with background (to look good with any background color)
+  description: Large tile with background to look good as a button or with other background colors)
   height: 512
   width: 512
   padding: false
   maxpreviewsize: true
+  tab: true
+  search: false
+  inventory: true
+  visualinventory: true
+  amp: true
 
 - id: horizontal
   title: Horizontal Badge
@@ -32,12 +52,22 @@
   height: 64
   padding: 4px;
   padding: false
+  tab: false
+  search: false
+  inventory: true
+  visualinventory: false
+  amp: false
 
 - id: official
   title: Official Logo
   description: Official Logo, with text, including tagline/copyright/etc
   height: 128
   padding: false
+  tab: false
+  search: false
+  inventory: true
+  visualinventory: false
+  amp: false
 
 - id: wordmark
   title: Wordmark
@@ -45,4 +75,9 @@
   height: 64
   padding: 4px;
   padding: false
+  tab: false
+  search: false
+  inventory: true
+  visualinventory: false
+  amp: false
 
