--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,18 @@ before_install:
 install:
 - sudo apt-get install -y librsvg2-bin imagemagick
 - sudo apt-get install python3-pip
-- sudo python3 -m pip install python-frontmatter commonmark
+- sudo python3 -m pip install python-frontmatter commonmark scour
 - gem install jekyll
 - gem install jekyll-redirect-from
 before_script:
 - cd bin
+- python3 chksvgname.py
+- python3 chkmeta.py
 - "./mkcard.sh"
 - python3 frontmatter_update.py
 - python3 fm2tag.py
 - python3 mkamp.py
+#- "./svg-clean.sh"
 - cd ..
 script:
 - jekyll build --source www --verbose --profile
