--- a/www/_config.yml
+++ b/www/_config.yml
@@ -3,8 +3,7 @@
 #
 
 google_analytics_id: UA-328425-25
-exclude: [ "*.sh", "**/*_src*", "logos/[b-z]*" ]
-#exclude: [ "*.sh", "**/*_src*" ]
+exclude: [ "*.sh", "**/*_src*" ]
 permalink: /news/:year/:month/:day/:title/index.:output_ext
 production_url: https://www.vectorlogo.zone
 indexpage: index.html
