--- a/.github/workflows/imagecheck.yaml
+++ b/.github/workflows/imagecheck.yaml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Golang
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        python-version: '1.22'
+        go-version: '1.22'
+        cache: false
 
     - name: Install Golang dependencies
       run: go install github.com/FileFormatInfo/fflint/cmd/fflint@latest
