--- a/.github/workflows/namecheck.yaml
+++ b/.github/workflows/namecheck.yaml
@@ -27,5 +27,5 @@ jobs:
       run: pip install python-frontmatter
 
     - name: Check names
-      run: bin/chksvgname.py
+      run: bin/chksvgname.py --verbose
 
